AST: Fix for conformance lookups into an abstract conformance with a concrete nested type

Fixes <https://bugs.swift.org/browse/SR-3500> and
<rdar://problem/29960484>.